--- a/config/search.py.TEMPLATE
+++ b/config/search.py.TEMPLATE
@@ -16,7 +16,9 @@ log_type = "access_log"
 outfile = "DIR_PATH/checklog.out"
 # Security enclave these files are being processed on.
 enclave = "ENCLAVE"
-# Directory path to where error and non-processed files are.
+# Directory path to where error and non-processed files are saved to.
+archive_dir = "ARCHIVE_DIR_PATH"
+# Directory path to where archived files are saved to.
 error_dir = "ERROR_DIR_PATH"
 # Logger file for the storage of log entries.
 # File name including directory path.
