--- a/config/search.py.TEMPLATE
+++ b/config/search.py.TEMPLATE
@@ -1,5 +1,4 @@
-# Pulled Search Process/RabbitMQ Configuration file.
-# Pulled Search Insert/Mongodb Configuration file.
+# Pulled Search Process/RabbitMQ and Insert/Mongodb Configuration file.
 # Classification (U)
 # Unclassified until filled.
 
