--- a/config/mongo.py.TEMPLATE
+++ b/config/mongo.py.TEMPLATE
@@ -1,6 +1,6 @@
 # Pulled Search Insert/Mongo DB Configuration section.
 user = "USERNAME"
-passwd = "ROOT_PASSWORD"
+passwd = "PASSWORD"
 # Mongo DB host information
 host = "HOST_IP"
 name = "HOSTNAME"
