--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 coverage==4.4.2
+enum34==1.1.10
 mock==2.0.0
-pika==0.11.0
+pika==1.2.0
 psutil==5.4.3
-pymongo==3.2.0
+pymongo==3.8.0
 simplejson==2.0.9
 unittest2>=1.1.0
