--- a/requirements-rabbitmq-lib.txt
+++ b/requirements-rabbitmq-lib.txt
@@ -1,1 +1,1 @@
-git+ssh://git@sc.appdev.proj.coe.ic.gov/JAC-DSXD/rabbitmq-lib.git#egg=rabbitmq-lib
+git+ssh://git@sc.appdev.proj.coe.ic.gov/JAC-DSXD/rabbitmq-lib.git@2.1.2#egg=rabbitmq-lib
