--- a/config/mongo.py.TEMPLATE
+++ b/config/mongo.py.TEMPLATE
@@ -1,31 +1,66 @@
 # Pulled Search Insert/Mongo DB Configuration section.
 # Update this file if using the -I option.
-user = "USERNAME"
-passwd = "PASSWORD"
+user = "USER"
+japd = "PSWORD"
 # Mongo DB host information
 host = "HOST_IP"
 name = "HOSTNAME"
-# Mongo database port (default is 27017)
+# Mongo database port
+# Default port for Mongo is 27017.
 port = 27017
 # Mongo configuration settings
+# Only set if using a different Mongo configuration file.
 conf_file = None
 # Authentication required:  True|False
+# Only set to False if no authentication is taking place.
 auth = True
-# Name of Mongo database.
-db = "DBNAME"
-# Name of Mongo table/collection.
-tbl = "TBLNAME"
+# Authentication database
+# Name of database to authenticate the user in.
+auth_db = "admin"
+# Authentication mechanism
+#   Current values allowed:  MONGODB-CR, SCRAM-SHA-1, SCRAM-SHA-256
+#   NOTE 1:  SCRAM-SHA-256 only works for Mongodb 4.0 and better.
+#   NOTE 2:  FIPS 140-2 environment requires SCRAM-SHA-1 or SCRAM-SHA-256.
+#   NOTE 3:  MONGODB-CR is not suppoerted in Mongodb 4.0 and better.
+auth_mech = "SCRAM-SHA-1"
+# Use Mongo client arguments
+# Type of connection format using parameter based.  Recommended choice.
+use_arg = True
+# Use Mongo client uri
+# Type of connection format using url command line.
+use_uri = False
 
 # Replica Set Mongo configuration settings.
-# Replica set name.
+# By default all settings are set to None.
 #    None means the Mongo database is not part of a replica set.
-#    Format:  repset = "REPLICA_SET_NAME"
+#
+# Replica set name.
+# Format:  repset = "REPLICA_SET_NAME"
 repset = None
 # Replica host listing.
-#    None means the Mongo database is not part of a replica set.
-#    Format:  repset_hosts = "HOST1:PORT, HOST2:PORT, [...]"
+# Format:  repset_hosts = "HOST1:PORT, HOST2:PORT, [...]"
 repset_hosts = None
 # Database to authentication to.
-#    Format:  db_auth = "AUTHENTICATION_DATABASE"
+# Format:  db_auth = "AUTHENTICATION_DATABASE"
 db_auth = None 
+
+# SSL Configuration settings
+# If not set will connect to Mongo without using SSL connections.
+# File containing the SSL certificate authority.
+# Example: ssl_client_ca = "/opt/mongo/certs/ca.pem"
+ssl_client_ca = None
+# File containing the SSL key.
+# Example:  ssl_client_key = "/opt/mongo/certs/client-key.pem"
+ssl_client_key = None
+# File containing the SSL certificate file.
+# Example: ssl_client_cert = "/opt/mongo/certs/client-cert.pem"
+ssl_client_cert = None
+# Pass phrase for the SSL Client Key, if one is set.
+# Example:  ssl_client_phrase = "Phrase"
+ssl_client_phrase = None
+
+# Name of Mongo database for data insertion
+db = "DATABASE"
+# Name of Mongo collection
+tbl = "COLLECTION"
 
