--- a/config/search.py.TEMPLATE
+++ b/config/search.py.TEMPLATE
@@ -31,17 +31,24 @@ error_dir = "ERROR_DIR_PATH"
 # Pulled Search Process/RabbitMQ Configuration section.
 # Update this section if using the -P option.
 user = "USER"
-pswd = "PSWD"
+japd = "PSWORD"
 host = "HOSTNAME"
+# List of hosts along with their ports to a multiple node RabbitMQ cluster.
+# Format of each entry is: "IP:PORT".
+# Example: host_list = ["hostname:5672", "hostname2:5672", "hostname:5673"]
+# Note:  If host_list is set, it will take precedence over the host entry.
+host_list = []
 # RabbitMQ Queue name.
 queue = "QUEUENAME"
 # RabbitMQ R-Key name (normally same as queue name).
 r_key = "RKEYNAME"
 # RabbitMQ Exchange name for each instance run.
 exchange_name = "EXCHANGE_NAME"
-# RabbitMQ listening port, default is 5672.
+# RabbitMQ listening port
+# Default is 5672
 port = 5672
-# Type of exchange:  direct, topic, fanout, headers
+# Type of exchange
+# Names allowed:  direct, topic, fanout, headers
 exchange_type = "direct"
 # Is exchange durable: True|False
 x_durable = True
