--- a/config/search.py.TEMPLATE
+++ b/config/search.py.TEMPLATE
@@ -30,8 +30,26 @@ error_dir = "ERROR_DIR_PATH"
 
 # Pulled Search Process/RabbitMQ Configuration section.
 # Update this section if using the -P option.
+# Fill either the mail section to send to RabbitMQ via email or fill in the
+#   RabbitMQ section to publish to RabbitMQ directly.  If using mail option
+#   this is normally used in conjunction with the rmq_2_mail.py program.
+# Note: If the email is filled in then this will override the RabbitMQ
+#   section.
+#
+# Email section
+# Email address to rabbitmq alias for the rmq_2_mail.py program.
+#   Note:  Leave to_addr set to None if not using email capability.
+# Example: to_addr = "rabbitmq@domain.name"
+to_addr = None
+# Name of the RabbitMQ queue.
+# Example:  subj = "Pulledsearch"
+subj = None
+#
+# RabbitMQ section
+# Login information.
 user = "USER"
 japd = "PSWORD"
+# Address to single RabbitMQ node.
 host = "HOSTNAME"
 # List of hosts along with their ports to a multiple node RabbitMQ cluster.
 # Format of each entry is: "IP:PORT".
