--- a/config/search.py.TEMPLATE
+++ b/config/search.py.TEMPLATE
@@ -12,6 +12,8 @@ log_file = "DIR_PATH/pulled_search.log"
 # Update this section if using the -P option.
 # Directory where Docid Pulled Html files are located at.
 doc_dir = ["DOC_DIR_PATH", "DOC_DIR_PATH2"]
+# Directory where files with previous processed files are stored at.
+processed_dir = "BASE_PATH/processed"
 # Regular expression for search for log file names.
 file_regex = "_IS_PULLED_"
 # Directory where log files to be searched are.
