Update pulled_search.parse_data v0.1.6 - Added ability to determine which tags to add to document

--- a/config/mongo.py.TEMPLATE
+++ b/config/mongo.py.TEMPLATE
@@ -1,3 +1,7 @@
+# Mongo DB Configuration file
+# Classification (U)
+# Unclassified until filled.
+
 # Pulled Search Insert/Mongo DB Configuration section.
 # Update this file if using the -I option.
 user = "USER"
