--- a/config/search.py.TEMPLATE
+++ b/config/search.py.TEMPLATE
@@ -103,3 +103,11 @@ merror_dir = "BASE_PATH/mongo_error"
 # Name of Mongo configuration file.  (Do not include the ".py" in the name.)
 # Do not change unless changing the name of the external Mongo config file.
 mconfig = "mongo"
+
+# Log parsing section.
+# Warning: Do not modify this section unless you know regular expressions.
+# NOTE: These name tags are reserved and cannot be used: ["command", "docid", "network", "pubDate", "asOf"]
+regex = "(?P<ip>.*?) (?P<proxyid>.*?) (?P<userid>.*?) \[(?P<logTime>.*?)(?= ) (?P<timeZone>.*?)\] (?P<requestid>.*?) (?P<secs>.*?)/(?P<msecs>.*?) \"(?P<verb>.*?) HTTP/(?P<httpVer>.*?)\" (?P<status>.*?) (?P<length>.*?) \"(?P<referrer>.*?)\" \"(?P<userAgent>.*?)\" (?P<url>.*?)?$"
+# These are the entries that will be parsed from the log entry and placed into the document.
+# Note: Name tags must match between regex and allowable and are case-sensitive.
+allowable = ["userid", "logTime", "verb", "status", "url"]
