--- a/config/search.py.TEMPLATE
+++ b/config/search.py.TEMPLATE
@@ -4,67 +4,67 @@
 
 ################################################################################
 # Pulled Search General Configuration section.
-# This section is for either the -P or -I option.
+# This section is for the -P, -F and -I options.
 #
 # Logger file for the storage of log entries.
 # File name including directory path.
 log_file = "BASE_PATH/log/pulled_search.log"
 
+
 ################################################################################
 # Pulled Search Process Configuration section.
-# Update this section if using the -P option.
+# This section is for the -P option.
 #
 # Directory where Docid Pulled Html files are located at.
 # NOTE: Do not include the YYYY/MM as part of the path as this will be added.
 doc_dir = ["DOC_DIR_PATH", "DOC_DIR_PATH2"]
 # Path and file name for previous processed files.
 processed_file = "BASE_PATH/processed/processed"
-# Regular expression for search for log file names.
-file_regex = "-PULLED-"
-# Regular expression for search for recalled products.
-pattern = "JAC.pull.subtype.*.SECURITY RECALL"
-
-# Enter the archive_log_dir if using the -a option otherwise enter the log_dir.
-# Directory where active log files to be searched are.
-log_dir = "LOG_DIR_PATH"
-# Directory where archived log files to be searched are.
-archive_log_dir = "ARCHIVE_DIR_PATH"
-
-# Type of log files to checked.
-log_type = "access_log"
 # Temporary file where check_log will write to.
 # File name including directory path.
 outfile = "BASE_PATH/tmp/checklog.out"
-# Security enclave these files are being processed on.
-enclave = "ENCLAVE"
 # Directory path to where error and non-processed files are saved to.
 error_dir = "BASE_PATH/search_error"
+# Security enclave these files are being processed on.
+enclave = "ENCLAVE"
+
+# Use one of the two entries below.
+# If not using the -a option.
+# Directory where active log files to be searched are.
+log_dir = "LOG_DIR_PATH"
+# If using the -a option.
+# Directory where archived log files to be searched are.
+archive_log_dir = "ARCHIVE_DIR_PATH"
+
+# These options will not need to be updated normally.
+# Regular expression for search for html file names.
+file_regex = "-PULLED-"
+# Regular expression for search for recalled products.
+pattern = "JAC.pull.subtype.*.SECURITY RECALL"
+# Type of apache log files to checked.
+log_type = "access_log"
 # Mapping of commands to keywords.
 # This is for the naming of the access logs which are not always under the command name.
 command = {"intelink": "eucom"}
 
+
 ################################################################################
-# Pulled Search Process/RabbitMQ Configuration section.
-# Update this section if using the -P option.
-# Fill either the mail section to send to RabbitMQ via email or fill in the
-#   RabbitMQ section to publish to RabbitMQ directly.  If using mail option
-#   this is normally used in conjunction with the rmq_2_mail.py program.
-# Note: If the email is filled in then this will override the RabbitMQ
-#   section.
-#
-########################################
-# Email section
+# Email Configuration section.
+# Update this section if using the (-P or -F) and -e options.
+# This option is normally is used in conjunction with the rmq_2_mail.py program.
 # Email address to rabbitmq alias for the rmq_2_mail.py program.
-#   Note:  Leave to_addr and subj set to None if not using email capability.
 # Example: to_addr = "rabbitmq@domain.name"
 to_addr = None
 # Name of the RabbitMQ queue.
 # Note: Subject must match exactly the RabbitMQ queue name and is case-sensitive.
+#     Also the subject will be CamelCased when processed.
 # Example:  subj = "Pulledsearch"
 subj = None
-#
-########################################
-# RabbitMQ section
+
+
+################################################################################
+# RabbitMQ Configuration section.
+# Update this section if using the (-P or -F) and -r options.
 # Login information.
 user = "USER"
 japd = "PSWORD"
@@ -81,6 +81,8 @@ queue = "QUEUENAME"
 r_key = "RKEYNAME"
 # RabbitMQ Exchange name for each instance run.
 exchange_name = "EXCHANGE_NAME"
+
+# These options will not need to be updated normally.
 # RabbitMQ listening port
 # Default is 5672
 port = 5672
@@ -94,6 +96,7 @@ q_durable = True
 # Do queues automatically delete once message is processed:  True|False
 auto_delete = False
 
+
 ################################################################################
 # Pulled Search Insert Configuration section.
 # Update this section if using the -I option.
@@ -105,7 +108,11 @@ mfile_regex = "_mongo.json"
 marchive_dir = "BASE_PATH/archive"
 # Directory path to where Insert/Mongodb error and non-processed files are saved to.
 merror_dir = "BASE_PATH/mongo_error"
+
+
+################################################################################
 # Name of Mongo configuration file.  (Do not include the ".py" in the name.)
+# This entry is used by the (-F and -i), (-P and -i) and -I options.
 # Do not change unless changing the name of the external Mongo config file.
 mconfig = "mongo"
 
@@ -113,7 +120,8 @@ mconfig = "mongo"
 # Log parsing section.
 # Warning: Do not modify this section unless you know regular expressions.
 # NOTE: These name tags are reserved and cannot be used: ["command", "docid", "network", "pubDate", "asOf"]
-regex = "(?P<ip>.*?) (?P<proxyid>.*?) (?P<userid>.*?) \[(?P<logTime>.*?)(?= ) (?P<timeZone>.*?)\] (?P<requestid>.*?) (?P<secs>.*?)/(?P<msecs>.*?) \"(?P<verb>.*?) (?P<verbUrl>.*?) HTTP/(?P<httpVer>.*?)\" (?P<status>.*?) (?P<length>.*?) \"(?P<referrer>.*?)\" \"(?P<userAgent>.*?)\" (?P<url>.*?)?$"
+regex = "(?P<ip>.*?) (?P<proxyid>.*?) (?P<userid>CN=.*?) \[(?P<logTime>.*?)(?= ) (?P<timeZone>.*?)\] (?P<requestid>.*?) (?P<secs>.*?)/(?P<msecs>.*?) \"(?P<verb>.*?) (?P<verbUrl>.*?) HTTP/(?P<httpVer>.*?)\" (?P<status>.*?) (?P<length>.*?) \"(?P<referrer>.*?)\" \"(?P<userAgent>.*?)\" (?P<url>.*?)?$"
 # These are the entries that will be parsed from the log entry and placed into the document.
-# Note: Name tags must match between regex and allowable and are case-sensitive.
+# Note 1: Name tags must match between regex and allowable and are case-sensitive.
+# Note 2: The "url" tag is hardcoded in the program to add "https://" to the front of the url.
 allowable = ["userid", "logTime", "verb", "status", "url"]
