Set up new version v0.2.3

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=JAC-IDM:pulled-search
-sonar.projectName=Pulled Search
+sonar.projectKey=pulled-search
+sonar.projectName=pulled-search
 sonar.projectVersion=0.2.3
 sonar.sources=.
 sonar.exclusions=setup.py,version.py
@@ -7,5 +7,7 @@ sonar.coverage.exclusions=test/unit/pulled_search/*.py
 sonar.cpd.exclusions=test/unit/pulled_search/*.py
 sonar.sourceEncoding=UTF-8
 sonar.language=py
-sonar.login=17fe975538e9162e0eaf961c990dc66b73ca1fc5
+sonar.python.version=2
+sonar.host.url=http://localhost:9000
+sonar.token=sqa_00374c45bc3f80669bc9047e21b1d99a4b7bfac8
 sonar.python.coverage.reportPaths=coverage.xml
