--- a/config/search.py.TEMPLATE
+++ b/config/search.py.TEMPLATE
@@ -4,7 +4,7 @@
 
 ################################################################################
 # Pulled Search General Configuration section.
-# This section is for the -P, -F and -I options.
+# This section is for all options.
 #
 # Logger file for the storage of log entries.
 # File name including directory path.
@@ -50,7 +50,8 @@ command = {"intelink": "eucom"}
 
 ################################################################################
 # Email Configuration section.
-# Update this section if using the (-P or -F) and -e options.
+# These entries are for the -e option under the -P and -F options.
+#
 # This option is normally is used in conjunction with the rmq_2_mail.py program.
 # Email address to rabbitmq alias for the rmq_2_mail.py program.
 # Example: to_addr = "rabbitmq@domain.name"
@@ -64,7 +65,8 @@ subj = None
 
 ################################################################################
 # RabbitMQ Configuration section.
-# Update this section if using the (-P or -F) and -r options.
+# These entries are for the -r option under the -P and -F options.
+#
 # Login information.
 user = "USER"
 japd = "PSWORD"
@@ -99,7 +101,8 @@ auto_delete = False
 
 ################################################################################
 # Pulled Search Insert Configuration section.
-# Update this section if using the -I option.
+# These entries are for the -I option.
+#
 # Directory where to monitor for new files to insert into Mongodb.
 monitor_dir = "MONITOR_DIR_PATH"
 # Regular expression for search for Insert/Mongodb file names.
@@ -112,12 +115,15 @@ merror_dir = "BASE_PATH/mongo_error"
 
 ################################################################################
 # Name of Mongo configuration file.  (Do not include the ".py" in the name.)
-# This entry is used by the (-F and -i), (-P and -i) and -I options.
+# This entry is for the -i and -I options (mongo database).
+#
 # Do not change unless changing the name of the external Mongo config file.
 mconfig = "mongo"
 
 ################################################################################
 # Log parsing section.
+# These entries are for the -I and -P options.
+#
 # Warning: Do not modify this section unless you know regular expressions.
 # NOTE: These name tags are reserved and cannot be used: ["command", "docid", "network", "pubDate", "asOf"]
 regex = "(?P<ip>.*?) (?P<proxyid>.*?) (?P<userid>CN=.*?) \[(?P<logTime>.*?)(?= ) (?P<timeZone>.*?)\] (?P<requestid>.*?) (?P<secs>.*?)/(?P<msecs>.*?) \"(?P<verb>.*?) (?P<verbUrl>.*?) HTTP/(?P<httpVer>.*?)\" (?P<status>.*?) (?P<length>.*?) \"(?P<referrer>.*?)\" \"(?P<userAgent>.*?)\" (?P<url>.*?)?$"
