Update pulled_search.parse_data v0.2.3 - Added write data to an archive directory

--- a/config/search.py.TEMPLATE
+++ b/config/search.py.TEMPLATE
@@ -101,16 +101,16 @@ auto_delete = False
 monitor_dir = "MONITOR_DIR_PATH"
 # Regular expression for search for Insert/Mongodb file names.
 mfile_regex = "_mongo.json"
-# Directory path to where Insert/Mongodb archived files are saved to.
-marchive_dir = "BASE_PATH/archive"
 # Directory path to where Insert/Mongodb error and non-processed files are saved to.
 merror_dir = "BASE_PATH/mongo_error"
 
 
 ################################################################################
 # Name of Mongo configuration file.  (Do not include the ".py" in the name.)
-# This entry is for the -i and -I options (mongo database).
+# These entries are for the -i and -I options (mongo database).
 #
+# Directory path to where Insert/Mongodb archived files are saved to.
+marchive_dir = "BASE_PATH/archive"
 # Do not change unless changing the name of the external Mongo config file.
 mconfig = "mongo"
 
