Fixed pulled_search.py v0.2.5 - Fixed a number of minor bugs

--- a/config/search.py.TEMPLATE
+++ b/config/search.py.TEMPLATE
@@ -39,7 +39,7 @@ pattern = "JAC.pull.subtype.*.SECURITY RECALL"
 log_type = "access_log"
 # Mapping of commands to keywords.
 # This is for the naming of the access logs which are not always under the command name.
-command = {"intelink": "eucom"}
+command = {"eucom": "intelink", "acic": "usacic"}
 
 
 ################################################################################
