--- a/config/mongo.py.TEMPLATE
+++ b/config/mongo.py.TEMPLATE
@@ -77,4 +77,5 @@ tls_certkey_phrase = None
 dbs = "DATABASE"
 # Name of Mongo collection
 tbl = "COLLECTION"
-
+# Name of Mongo collection for unparsed entries
+unparsed = "unparsed"
