--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 chardet==3.0.4
+certifi==2019.11.28
 distro==1.6.0
 enum34==1.1.10
+idna==2.10
 pika==1.2.0
-requests==2.22.0
-simplejson==2.0.9
+requests==2.25.0
+simplejson==3.13.2
 six==1.12.0
 urllib3==1.26.19
-email==4.0.3
 psutil==5.4.3
 pymongo==3.12.3
