--- a/requirements3.txt
+++ b/requirements3.txt
@@ -1,10 +1,11 @@
 chardet==3.0.4
-distro==1.6.0
+distro==1.9.0
 enum34==1.1.10
-pika==1.2.0
-requests==2.22.0
-simplejson==3.13.2
-six==1.12.0
-urllib3==1.24.2
-psutil==5.4.3
+idna==2.10
+pika==1.3.1
+psutil==5.9.4
 pymongo==4.1.1
+simplejson==3.13.2
+six==1.16.0
+urllib3==1.26.19
+requests==2.25.0
