--- a/requirements39.txt
+++ b/requirements39.txt
@@ -1,11 +1,12 @@
+certifi==2024.12.14
 chardet==3.0.4
 distro==1.9.0
 enum34==1.1.10
 idna==2.10
 pika==1.3.1
 psutil==5.9.4
-pymongo==4.1.1
+pymongo==4.10.1
 simplejson==3.13.2
 six==1.16.0
-urllib3==1.26.19
+urllib3==1.26.20
 requests==2.25.0
